--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Archeomoneta">
+    <meta name="keywords" content="WonderCoins, Archeomoneta, numismatica">
+    <meta name="author" content="Ángel Vila Vidal">
     <title>Archeomoneta - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="../static/src/tail.css">
     {% block scripts %}{% endblock %}
