--- a/website/templates/mapa.html
+++ b/website/templates/mapa.html
@@ -5,6 +5,7 @@
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 {% endblock %}
 {% block content %}
+    <p class="text-xl text-center">Cecas en azul, hallazgos en verde, tesoros en rojo</p>
     <div id="map" class="h-full w-full"></div>
     <script src="../static/mapa.js"></script>
     <script>
