--- a/website/templates/search_tipos.html
+++ b/website/templates/search_tipos.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+{% block title %}Buscador de tipos{% endblock %}
 {% block content %}
     <div id="searchbar" class="form-control w-full">
         <form method="POST">
