--- a/website/templates/tesoro.html
+++ b/website/templates/tesoro.html
@@ -29,7 +29,7 @@
         <br>
         <h2>Tamaño del tesoro</h2>
         <hr>
-        <p>X</p>
+        <p>{{ datos.get("tamanno") }} monedas</p>
         <br>
         <h2>Bibliografía</h2>
         <hr>
