--- a/website/templates/moneda.html
+++ b/website/templates/moneda.html
@@ -25,12 +25,12 @@
             <div>
                 <h2>Otra Numeración</h2>
                 <hr>
-                <p></p>
+                <p> </p>
             </div>
             <div>
                 <h2>Colección</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda.get("collection") }}</p>
             </div>
             <div>
                 <h2>URI</h2>
@@ -46,6 +46,7 @@
             <div>
                 <h2>Excavación</h2>
                 <hr>
+                <p> </p>
             </div>
             <div>
                 <h2>Peso</h2>
@@ -65,7 +66,7 @@
             <div>
                 <h2>Desgaste</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda.get("peculiarity_production") }}</p>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-x-4 gap-y-3">
@@ -94,18 +95,22 @@
             <div>
                 <h2>Bibliografía</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda.get("bibliography_title") }}</p>
             </div>
             <div>
                 <h2>Observaciones</h2>
                 <hr>
-                <p></p>
+                <p>{{ moneda.get("public_info") }}</p>
             </div>
             <div>
                 <h2>Localización</h2>
                 <hr>
                 <div id="map" class="w-full h-60"></div>
                 <script src="../static/mapa.js"></script>
+                <script>
+                L.marker([{{ moneda.get("map").get("lat") }}, {{ moneda.get("map").get("lon") }}]).addTo(map).bindPopup("{{ moneda.get("popup") }}").openPopup();
+                map.setView([{{ moneda.get("map").get("lat") }}, {{ moneda.get("map").get("lon") }}], 12);
+                </script>
             </div>
         </div>
     </div>
